[package]
name = "line-graph"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Construct the line graph of an undirected graph"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["mathematics"]
repository = "https://github.com/a-maier/line-graph"

[dependencies]
petgraph = "0.6"
